--- a/css/stylenew.css
+++ b/css/stylenew.css
@@ -146,7 +146,7 @@ font-size:120%;
 }
 
 
-#encode,#pagetwo > div.ui-footer.ui-bar-b.ui-footer-fixed.slideup > div > ul > li.ui-block-c > a,#pagetwo > div.ui-footer.ui-bar-b.ui-footer-fixed.slideup > div > ul > li.ui-block-b > a
+#encode,#pagetwo > div.ui-footer.ui-bar-b.ui-footer-fixed.slideup > div > ul > li.ui-block-c > a,#pagetwo > div.ui-footer.ui-bar-b.ui-footer-fixed.slideup > div > ul > li.ui-block-b > a,#footerTwo > div > ul > li.ui-block-a > a
 {
 	font-size: 110%;
 
